@@ -1,3 +1,8 @@
+Fri Jan  8 19:49:27 2016  Koichi Sasada  <ko1@atdot.net>
+
+	* gc.c: remove heap_page::body. Instead of this field,
+	  heap_page::start field works well.
+
 Fri Jan  8 19:31:52 2016  Koichi Sasada  <ko1@atdot.net>
 
 	* gc.c: rename rb_heap_t::page_length to rb_heap_t::total_pages.
